Added New Launcher Icon, Added new Home UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NASHealthAndSafety</string>
+    <string name="app_name">NAS H&amp;S</string>
     <string name="name_text_caps">NAME</string>
     <string name="email_text_caps">EMAIL-ID</string>
     <string name="mobile_text_caps">MOBILE NUMBER</string>
